--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/hands": "^0.4.1675469240",
+    "@tensorflow-models/speech-commands": "^0.5.4",
+    "@tensorflow/tfjs": "^4.22.0",
     "amazon-cognito-identity-js": "^6.3.16",
     "axios": "^1.13.5",
     "lucide-react": "^0.570.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
